2006-05-25 Scott Dattalo <scott@dattalo.com>
	* modules/logic.h, modules/logic.cc, modules/gpsim_modules.cc:
	Only use if the gui is enabled

2006-05-25 Scott Dattalo <scott@dattalo.com>
	* modules/switch.h, modules/switch.cc, modules/gpsim_modules.cc:
	  Only use gui if enabled. 
	* modules/stimuli.h, modules/stimuli.cc: Began adding support for
	  file stimulus.

2006-05-24 Borut Razem <borut.razem@siol.net>
	* modules/makefile.mingw, modules/modules.vcproj: added stimuli.*
	* plat/win32/libgpsim: MSVC sync

2006-05-23 Borut Razem <borut.razem@siol.net>
	* doc/gpsimWin32.html: CVS replaced with Subversion

2006-05-22 Roy Rankin <rrankin@ihug.com.au>
	* src/14bit-tmrs.h, src/14bit-tmrs.cc:
	- PWM fixes CCP high if duty cycle 0, CCPRnH loaded on TMR2
	  compare, PWM starts after first TMR2 compare, PMR2::put 
	  and PR2::put rewrite
	* regression/ccp/pwm_877a.asm, regression/ccp/Makefile,
	  regression/run_regression.sh: PWM regression

2006-05-21 Scott Dattalo <scott@dattalo.com>
	* modules/stimuli.h, modules/stimuli.cc: New files for 'extended'
	stimuli. Currently only an asynchronous stimulus replacement
	called 'pulsegen' has been created.
	* modules/Makefile.am, modules/gpsim_modules.cc: Added pulsegen to
	the default list of modules.
	* regression/run_regression.sh, regression/wavegen/16f877a.lkr,
	regression/wavegen/Makefile, regression/wavegen/pulsegen.asm,
	regression/wavegen/pulsegen.stc: New regression test to test the
	pulsegen module. (This test is really just a copy of the ccp
	regression test except that the asynchronous stimulus has been
	replaced with a pulsegen module).
	* src/symbol.cc: Module symbol descriptions were not getting
	printed 
	* cli/cmd_break.cc: removed bogus warning about cycle break points
	not getting set.
	
2006-05-21 Robert Pearce <rob@bdt-home.demon.co.uk>
	* src/p16f87x.h, src/p16f87x.cc: Re-worked 16F871 to be derived from
	  16C64 rather than 74, because that's the easiest way I could find to